# pong_wars_led

./: .gitignore  Cargo.toml  GUIDE.md  Makefile  README.md
.cargo/: config.toml
core/: Cargo.toml
core/src/: color.rs  game.rs  lib.rs
firmware/: Cargo.toml  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: main.rs
simulator/: Cargo.toml
simulator/src/: main.rs
