[package]
name = "pong-wars-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Desktop simulator of the 64x64 HUB75 LED matrix running Pong Wars — preview the firmware without flashing."

[[bin]]
name = "pong-wars-sim"
path = "src/main.rs"

[dependencies]
pong-wars-core = { path = "../core" }

# minifb gives us a window + a raw u32 ARGB pixel buffer; that's exactly the
# right shape for an LED-panel simulator (one u32 per output pixel, blit on
# every frame).  No need for wgpu, winit, or any GUI framework.
minifb = "0.28"
